Add file handling features and WebSocket enhancements
- Introduced new response types: ROOM_JOINED, UPLOAD_PROGRESS, and ERROR.
- Updated FileCleanupService to include file cleanup functionality.
- Enhanced FileStorageService to support room-based file uploads and deletions.
- Implemented progress notifications for file uploads via WebSocket.
- Added validation for file download requests based on room membership.
- Created new exception handling for forbidden operations.
- Updated application properties for file size limits and storage paths.
- Improved README with API documentation and usage instructions.